package AdminView.Inventory;

public class InventoryController {
}
