@startuml

title __ADMINVIEW's Class Diagram__\n

  namespace AdminView {
    class AdminView.AdminView {
        {static} + main()
        + start()
    }
  }
  

  namespace AdminView {
    class AdminView.AdminViewController {
    }
  }

    namespace AdminView {
      namespace Products {
        class AdminView.Products.Product {
            {static} + main()
            + start()
        }
      }
    }


    namespace AdminView {
      namespace Products {
        class AdminView.Products.ProductController {
        }
      }
    }

namespace AdminView {
    namespace Inventory {
      class AdminView.Inventory.Inventory {
          {static} + main()
          + start()
      }
    }
  }


  namespace AdminView {
    namespace Inventory {
      class AdminView.Inventory.InventoryController {
      }
    }
  }
namespace AdminView {
    namespace AdminTools {
      class AdminView.AdminTools.AdminTools {
          {static} + main()
          + start()
      }
    }
  }


  namespace AdminView {
    namespace AdminTools {
      class AdminView.AdminTools.AdminToolsController {
      }
    }
  }

  AdminView.Inventory.Inventory -up-|> javafx.application.Application
    AdminView.Products.Product -up-|> javafx.application.Application

  AdminView.AdminView -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
